update semantic search guide